--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./images/favicon-32x32.png"
+      href=".images/favicon-32x32.png"
     />
 
     <link
@@ -30,7 +30,7 @@
   <body>
     <header>
       <nav>
-        <img class="logo img-fluid" src="/images/logo.svg" alt="" />
+        <img class="logo img-fluid" src="images/logo.svg" alt="" />
         <ul>
           <li><a href="#">Features</a></li>
           <li><a href="#">Team</a></li>
@@ -45,7 +45,7 @@
             <div class="col-lg-12 home-image">
               <img
                 class="img-fluid"
-                src="/images/illustration-intro.png"
+                src="images/illustration-intro.png"
                 alt=""
               />
             </div>
@@ -71,7 +71,7 @@
             <div class="col-lg-6 feature-box">
               <img
                 class="img-fluid"
-                src="/images/icon-access-anywhere.svg"
+                src="images/icon-access-anywhere.svg"
                 alt=""
               />
               <div class="modify-content features-content">
@@ -83,7 +83,7 @@
               </div>
             </div>
             <div class="col-lg-6 feature-box">
-              <img class="img-fluid" src="/images/icon-security.svg" alt="" />
+              <img class="img-fluid" src="images/icon-security.svg" alt="" />
               <div class="features-content">
                 <h2>Security you can trust</h2>
                 <p>
@@ -96,7 +96,7 @@
             <div class="col-lg-6 col-md-12 col-sm-12 feature-box">
               <img
                 class="img-fluid"
-                src="/images/icon-collaboration.svg"
+                src="images/icon-collaboration.svg"
                 alt=""
               />
               <div class="features-content">
@@ -109,7 +109,7 @@
               </div>
             </div>
             <div class="col-lg-6 col-md-12 col-sm-12 feature-box">
-              <img class="img-fluid" src="/images/icon-any-file.svg" alt="" />
+              <img class="img-fluid" src="images/icon-any-file.svg" alt="" />
               <div class="features-content modify-content-2">
                 <h2>Store any type of file</h2>
                 <p>
@@ -129,7 +129,7 @@
             <div class="col-lg-6 productive-image">
               <img
                 class="img-fluid"
-                src="/images/illustration-stay-productive.png"
+                src="images/illustration-stay-productive.png"
                 alt=""
               />
             </div>
@@ -199,7 +199,7 @@
       </section>
 
       <section class="testimonials">
-        <img class="quotes-img img-fluid" src="/images/bg-quotes.png" alt="" />
+        <img class="quotes-img img-fluid" src="images/bg-quotes.png" alt="" />
         <div class="container-fluid">
           <div class="grid">
             <div class="review-1 review">
@@ -210,7 +210,7 @@
                   well-oiled collaboration machine.
                 </p>
                 <div class="profile-information">
-                  <img class="img-fluid" src="/images/profile-1.jpg" alt="" />
+                  <img class="img-fluid" src="images/profile-1.jpg" alt="" />
                   <div class="info">
                     <h3>Satish Patel</h3>
                     <small>Found & CEO, Huddle</small>
@@ -227,7 +227,7 @@
                   well-oiled collaboration machine.
                 </p>
                 <div class="profile-information">
-                  <img class="img-fluid" src="/images/profile-2.jpg" alt="" />
+                  <img class="img-fluid" src="images/profile-2.jpg" alt="" />
                   <div class="info">
                     <h3>Bruce McKenzie</h3>
                     <small>Found & CEO, Huddle</small>
@@ -244,7 +244,7 @@
                   well-oiled collaboration machine.
                 </p>
                 <div class="profile-information">
-                  <img class="img-fluid" src="/images/profile-3.jpg" alt="" />
+                  <img class="img-fluid" src="images/profile-3.jpg" alt="" />
                   <div class="info">
                     <h3>Iva Boyd</h3>
                     <small>Found & CEO, Huddle</small>
@@ -276,7 +276,7 @@
 
     <footer>
       <div class="box1">
-        <img class="img-fluid" src="/images/logo.svg" alt="" />
+        <img class="img-fluid" src="images/logo.svg" alt="" />
         <div class="content">
           <ul>
             <li>
@@ -287,11 +287,11 @@
       </div>
       <div class="box2">
         <div class="phone">
-          <img class="img-fluid" src="/images/icon-phone.svg" alt="" />
+          <img class="img-fluid" src="images/icon-phone.svg" alt="" />
           <p>+1-543-123-4567</p>
         </div>
         <div class="email">
-          <img class="email" src="/images/icon-email.svg" alt="" />
+          <img class="email" src="images/icon-email.svg" alt="" />
           <p>example@flyo.com</p>
         </div>
       </div>
